# LightRag-FEFTA

./: .clinerules  .gitignore  README.md  pyproject.toml
data/: fefta_20240401.html  fefta_20240401.txt
lightrag_data/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
src/lightrag_fefta/: __init__.py  build_rag.py  common.py  query_rag.py
