[project]
name = "lightrag-fefta"
version = "0.1.0"
description = "LightRag FEFTA Project"
authors = [
    {name = "Kou"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[[tool.poetry.packages]]
include = "lightrag_fefta"
from = "src"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
